--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
     "ember-addon"
-  ],
-  "repository": "",
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/krefsar/ember-flex.git"
+	},
   "license": "MIT",
   "author": "",
   "directories": {
