--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
     "ember-addon"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/krefsar/ember-flex.git"
-	},
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/krefsar/ember-flex.git"
+  },
   "license": "MIT",
   "author": "",
   "directories": {
@@ -24,7 +24,9 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.2"
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-sass": "^10.0.1",
+    "sass": "^1.20.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
